[project]
name = "wellinformed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "docling>=2.61.1",
    "google-adk>=1.18.0",
    "google-genai>=1.49.0",
    "mem0ai>=1.0.0",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]
